# fastapi_2_alchemy

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  celery_utils.py  docker-compose.yml  main.py  pyproject.toml  worker.py
alembic/: env.py
alembic/versions/: 7cb6a4cde188_add_project_table.py  f06af3f36e45_init_tables.py
apps/auth/: connector.py  models.py  routers.py  schemas.py  services.py
apps/project/: models.py  repository.py  routers.py  schemas.py  services.py  types.py
apps/tasks/: __init__.py  email.py  routers.py  schemas.py
apps/user/: controllers.py  models.py  repository.py  routers.py  schemas.py  services.py
core/: constants.py  database.py  exceptions.py  jwt_middleware.py  logging_setup.py  security.py  store.py
core/middleware/: exc_middleware.py  jwt_middleware.py
prometheus/: prometheus.yml
routers/: api_v1_router.py
settings/: settings.py
tests/: conftest.py  fixtures.py
tests/project/: test_external.py  test_repository.py  test_services.py
tests/user/: test_controllers.py  test_repository.py  test_services.py
utils/: validators.py
