[project]
name = "fastapi_2_alchemy"
version = "2.0.0"
package-mode = false
description = ""
authors = [
    {name = "Slava Kulikov",email = "slava_kulikov@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "ruff (>=0.12.12,<0.13.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "greenlet (>=3.2.4,<4.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-select = ["I", "E501"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.mypy]
python_version = "3.13"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
pytest-mock = "^3.15.1"
httpx = "^0.28.1"
respx = "^0.22.0"
allure-pytest = "^2.15.0"
pytest-html = "^4.1.1"
pytest-xdist = "^3.8.0"
pytest-cov = "^7.0.0"

[tool.pytest.ini_options]
addopts = "-v -ra --maxfail=1 --disable-warnings --cov-report=html"
testpaths = ["tests"]
markers = [
    "database: тесты, использующие базу данных",
    'services: тестирование сервисов',
    'controllers: тестирование эндпоинтов'
]
filterwarnings = ["ignore::DeprecationWarning"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"